--- a/ARMeasurementScreenBlogPost/Info.plist
+++ b/ARMeasurementScreenBlogPost/Info.plist
@@ -54,5 +54,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This app will use your camera for ARKit learning purposes.</string>
 </dict>
 </plist>
